fix(Footer): fixes contact button alignment

--- a/components/sections/Footer/Footer.module.css
+++ b/components/sections/Footer/Footer.module.css
@@ -33,6 +33,7 @@
 
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 
   padding: 0.5em 0.75em;
   margin: 0 0 300px 0;
